<resources>
    <string name="app_name">Pollus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_app_textview">Pollus</string>
    <string name="correo_form_texthint">Usuario</string>
    <string name="forgot_pass_text">¿Olvidaste tu contraseña?</string>
    <string name="ingresar_button_text">Ingresar</string>
    <string name="iniciar_con_google_text_button">Iniciar con Google</string>
    <string name="correo_electronico_textfield_text">Correo electronico</string>
    <string name="no_acount_to_register_text">¿No posees una cuenta? Regístrate</string>
    <string name="need_help_text">¿Necesitas ayuda? Contactanos</string>
    <string name="pass_hint_text">Contraseña</string>
    <string name="register_name_hint">Juan Perez</string>
    <string name="email_register_hint">juanperez@gmail.com</string>
    <string name="imput_pass_hint">Ingrese una contraseña</string>
    <string name="code_register_hint">CodEjemplo09</string>
    <string name="code_textView">Código de Organización/Empresa a la que pertenece</string>
    <string name="pass_register_hint">Contraseña</string>
    <string name="email_textView">Email</string>
    <string name="name_textView">Nombre</string>
    <string name="register_button_text">Registrar</string>
    <string name="survey_title">Titulo de encuestas</string>
    <string name="survey_info">Info de encuesta</string>
    <string name="survey_did">1</string>
    <string name="example_question_text">1. ¿Del 1 al 5 que tan satisfecho se siente con el trabajo realizado en el proyecto de bacheo de calle en la colonia X</string>
    <string name="create_survey_btn_text">Crear nueva encuesta</string>
    <string name="create_newquestion_textbtn">nueva pregunta</string>
    <string name="save_questions_textbtn">guardar</string>
    <string name="email_text">Correo electronico</string>
    <string name="example_email_text">juanperez@gmail.com</string>
    <string name="change_pass_textbtn">Cambiar contraseña</string>
    <string name="curently_pass">Ingrese la contrseña actual</string>
    <string name="newpass_textview">Ingrese una nueva contraseña</string>
    <string name="pass_helperText">La contraseña debe tener un minimo de 8 caracteres</string>
    <string name="confirm_newpass">Confirme su nueva contraseña</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_message">Error: Usuario no encontrado o contraseña incorrecta</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="write_your_question">Escribe tu pregunta</string>
    <string name="write_your_answers">Escribe tus respuestas</string>
    <string name="next">Siguiente</string>
    <string name="email_profile_default">juanperez@gmail.com</string>
    <string name="org_default_text">Alcaldia Municipal de Usulutan</string>
    <string name="cancel_button">Cancelar</string>
    <string name="name_register_textview">Nombre</string>
    <string name="name_register_hint">Juan</string>
    <string name="lastname_register_textview">Apellido</string>
    <string name="lastname_hint">Perez</string>
    <string name="username_register_textview">Username</string>
    <string name="username_hint">juanperez01</string>
    <string name="register_error">Credenciales no válidas o campos vacíos</string>
</resources>