<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap"
    android:background="@color/background_app"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/arrowReturn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_w_register_size"
        android:layout_height="@dimen/logo_h_register_size"
        android:src="@drawable/logo_transparent_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowReturn"
        android:layout_marginTop="1dp"/>

    <TextView
        android:id="@+id/pollus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/name_app_textview"
        android:textAppearance="@style/pollus"
        android:textSize="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_register_textImput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:hint="@string/username_register_textview"
        app:boxBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pollus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_register_textImput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:hint="@string/email_textView"
        app:boxBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_register_textImput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_register_textImput"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:hint="@string/name_register_textview"
        app:boxBackgroundColor="@color/background_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register_textImput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastname_register_textImput"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_gap"
        android:hint="@string/lastname_register_textview"
        app:boxBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register_textImput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_register_textImput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:hint="@string/pass_register_hint"
        app:boxBackgroundColor="@color/background_app"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_register_textImput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_register_textImput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:hint="@string/code_textView"
        app:boxBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register_textImput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_register_ti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginBottom="@dimen/default_gap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_register_textImput" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>