<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginLeft="60dp"
        android:text="MIS ENCUESTAS"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/surveys_survey_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_title"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            app:cardBackgroundColor="#EDEBEB">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ultima actualizacion:"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/surveys_survey_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_info"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Respuestas:"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                />
            <TextView
                android:id="@+id/surveys_survey_did"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_did"
                android:textSize="12dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="35dp"
                />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/create_newsurvey_button"
        style="Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:text="@string/create_survey_btn_text"
        app:icon="@drawable/plus"
        app:iconSize="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>